fixed horizontal scrollbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1537,6 +1537,7 @@ input[type=number] {
 
 .firefox .drawer.overflow-auto #sidebar-content {
     margin-right: -6.5px;
+    overflow-x: none;
 }
 /*!
  * FilePond 4.30.3
