--- a/public/css/app_pdf.css
+++ b/public/css/app_pdf.css
@@ -1482,6 +1482,7 @@ input[type=number] {
 
 .firefox .drawer.overflow-auto #sidebar-content {
     margin-right: -6.5px;
+    overflow-x: none;
 }
 /*!
  * FilePond 4.30.3
